Add custom playlist and ad hoc setlist features (#1038)
* Add setlist feature

- Allows user to select multiple songs to a set, which are then played in sequence before returning to the library menu.

* Allow users to create and curate custom playlists.

* Refinements to playlists and setlist UX

- Ad hoc setlists are now launched with hold+release on yellow
- All playlists (including favorites) are now found in the playlist library menu
- Entire playlist can now be added to setlist in one go

* Playlist and setlist improvements
- Add ability to save current setlist to a playlist
- Show current setlist in playlist view, allowing deletion of songs or entire setlist
- Fix bug where exiting playlist select view returned to main menu instead of library
- Add ability to add playlist to setlist in one go

* Fix instrument selection bug

* Add setlist specific pause menu with skip option.

* address review comments

- Make setlist pause inactive by default
- Move skip option in setlist pause menu to second to last position
- Don't allow user to create a playlist named the same as the localized "Current Setlist" string.
- Make rename dialog text field active when dialog is created

* Remove skip option from navigation group when skip is disabled

- Resolves issue where invisible skip option was still selectable using button navigation

* Return player to selected playlist after playing a song from said playlist

* Use blue button instead of yellow hold to start setlist

---------

Co-authored-by: Jacob Chambers <jacobchambers@hotmail.co.uk>

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -254,6 +254,8 @@
             "PlayableSongs": "PLAYABLE SONGS",
             "RandomSong": "RANDOM SONG",
             "Playlists": "PLAYLISTS",
+            "Favorites": "Favorites",
+            "YourPlaylists": "YOUR PLAYLISTS",
             "Popup": {
                 "Header": {
                     "SortBy": "Sort By...",
@@ -266,6 +268,10 @@
                     "GoToSection": "Go To Section...",
                     "AddToFavorites": "Add To Favorites",
                     "RemoveFromFavorites": "Remove From Favorites",
+                    "AddToPlaylist": "Add To Playlist...",
+                    "RemoveFromPlaylist": "Remove From Playlist",
+                    "CreateNewPlaylist": "Create New...",
+                    "RemovePlaylist": "Remove Playlist",
                     "ViewSongFolder": "View Song Folder",
                     "CopySongChecksum": "Copy Song Checksum"
                 }
@@ -274,6 +280,13 @@
             "NoPlayersConnected": "No players connected! Go to the profiles menu to connect a player.",
             "Play": "Play Song",
             "Search": "Search",
+            "CurrentSetlist": "Current Setlist",
+            "AddToSet": "Add To Setlist",
+            "AddedToSet": "Added To Setlist",
+            "PlaylistAddedToSet": "Added {0:N0} Songs From Playlist To Setlist",
+            "StartSet": "Start The Set",
+            "NoSongsInPlaylist": "No Songs In Playlist",
+            "CannotAddToSelf": "No, I will not create an ouroboros for you. Nice try, Jaden.",
             "MoreOptions": "<align=left><size=80%>More Options<br>(Hold) Navigate Sections</size></align>"
         },
         "ProfileInfo": {
