Add venue rendering scaling + FSR3.1 and AA controls (#1009)
* Add very simple venue camera manager that manages render scale

* Attach venue camera manager when loading venue

* Add fsr3unity

* Hookup settings for simple venue rendering scaling

* Save original renderscale on awake

* Add fsr setting

* Actually add forgotten fsr package

* Copy assets from fsr3 unity

* Fix string

* Add fsr3 package in package lock

* fsr works

* Add FSR AA setting

* Cleanup todos

* Move FSR3Unity from submodule to git package dependency

* Address PR feedback

* Remove fsr3unity from gitmodules

* Reset fsr context when scale changes

* fsr manager ondisable/enable

* Enable Native RenderPass api

* Unlock FSR3 selection for venue aa for everyone now that it works

* Revert enabling native render passes

* Fix getting depth for fsr3

* Fix the jitter finally

* Disable debug view by default

* Auto generate reactive mask

* Restrict FSR to supported  systems

* Apply mipmap bias when using fsr

* cleanup fsr flags

* Do not use editor utilities when applying mipmap bias

* Fix mipmap bias

* no need for random rw for temporary textures for reactive mask

* Pickup fix for motion vector jitter cancellation and drop workaround

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -1015,6 +1015,28 @@
                 "Name": "Whammy Pitch Shift Amount",
                 "Description": "Number of semitones the pitch is changed when the whammy bar is fully pressed. Larger amounts result in lower pitches; default is 1."
             },
+            "VenueAntiAliasing": {
+                "Name": "Venue Anti Aliasing",
+                "Description": "The anti-aliasing method to use for venue backgrounds.",
+                "Dropdown": {
+                    "None": "None",
+                    "FXAA": "FXAA",
+                    "MSAA": "MSAA",
+                    "FSR3": "FSR3"
+                }
+            },
+            "VenueRenderingQuality": {
+                "Name": "Venue Rendering Quality",
+                "Description": "The quality/resolution to use for venue backgrounds.",
+                "Dropdown": {
+                    "NativeAA": "Native",
+                    "UltraQuality": "Ultra Quality",
+                    "Quality": "Quality",
+                    "Balanced": "Balanced",
+                    "Performance": "Performance",
+                    "UltraPerformance": "Ultra Performance"
+                }
+            },
             "VideoCalibration": {
                 "Name": "Video Calibration (ms)",
                 "Description": "Video calibration in milliseconds. Use the calibrator to automatically calibrate. This accounts for delays between the game's processing and the actual frame being displayed."
