Add no star power overlap modifier and implement for guitar

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -61,7 +61,8 @@
             "UnpitchedOnly": "Unpitched Only",
             "NoDynamics": "No Dynamics",
             "NoVocalPercussion" : "No Percussion",
-            "RangeCompress": "No Range Shifts"
+            "RangeCompress": "No Range Shifts",
+            "NoStarPowerOverlap": "No Star Power Overlap"
         },
         "SortAttribute": {
             "Album": "Album",
