--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -19,9 +19,9 @@
             "FiveFretGuitar": "Five Fret Guitar",
             "SixFretGuitar": "Six Fret Guitar",
             "FourLaneDrums": "Standard Drums",
-            "FiveLaneDrums": "5-Lane Drums",
+            "FiveLaneDrums": "Five-Lane Drums",
             "ProGuitar": "Pro Guitar",
-            "ProKeys": "Pro Keys",
+            "ProKeys": "Keys",
             "Menu": "Menu",
             "Vocals": "Vocals"
         },
@@ -1509,10 +1509,10 @@
                 "SubSection": {
                     "Name": "Game Mode",
                     "Dropdown": {
-                        "Drums": "Drums (4 and 5 lane)",
-                        "FiveFretGuitar": "Five Fret Guitar",
+                        "Drums": "Drums (Four- and Five-Lane)",
+                        "FiveFretGuitar": "Five-Fret Guitar",
                         "Vocals": "Vocals",
-                        "ProKeys": "Pro Keys"
+                        "ProKeys": "Keys (Pro and Five-Lane)"
                     }
                 },
                 "AntiGhosting": {
