UDP Data Stream (#1078)
* UDP Data Stream

Adds a UDP data stream of various things that YARG is doing. Currently mostly lighting information but can be expanded on. YALCY can read these packets.

* Added AutoGen bool to data stream and venue track

* Missed adding it to the outgoing mail

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -1087,6 +1087,10 @@
                 "Name": "Apply Volume Settings to Music Library Previews",
                 "Description": "Volume settings for specific instrumments will be applied in the Music Library as well."
             },
+            "DataStreamEnable": {
+                "Name": "Enable UDP data stream",
+                "Description": "Enables sending of UDP information packets over the network, for software such as YALCY."
+            },
             "RB3EEnabled": {
                 "Name": "Enable RB3E Stage Kit data stream",
                 "Description": "Enables sending of RB3E style stage kit information packets over the network, for hardware such as StageKitPied."
