--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -1712,6 +1712,10 @@
                 "SoloTaps": {
                     "Name": "Allow Taps During Solos",
                     "Description": "Allows solo buttons to tap notes during solos"
+                },
+                "NoStarPowerOverlap": {
+                    "Name": "No Star Power Overlap",
+                    "Description": "Disallows earning more Star Power while Star Power is already active."
                 }
             },
             "HighwayPreset" : {
