use localised text for scorescreen buttons

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -331,7 +331,9 @@
             "Players" : "Players"
         },
         "ScoreScreen" : {
-            "BandScoreNotSaved" : "(Score not saved)"
+            "BandScoreNotSaved" : "(Score not saved)",
+            "RestartSong" : "Restart Song",
+            "EndSetlistEarly" : "End Setlist Early"
         },
         "Settings": {
             "NoFolder": "<i>No Folder</i>",
