add missing localization strings

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -1383,6 +1383,15 @@
                 "KickStarpower": {
                     "Name": "Kick Star Power"
                 },
+                "Metal": {
+                    "Name": "Note Metal"
+                },
+                "MetalStarPower": {
+                    "Name": "Note Metal Star Power"
+                },
+                "Miss": {
+                    "Name": "Missed Note"
+                },
                 "OpenFret": {
                     "Name": "Open Fret"
                 },
