end setlist early and restart song buttons on score screen (#1099)
* add end setlist and restart buttons

* end setlist button only when relevant

* use localised text for scorescreen buttons

* change text to end setlist

* seperate method for navigation scheme

* refactor SetNavigationScheme

* clean up leftover comments from copy

* Apply suggestions from code review

Co-authored-by: wyrdough <nathan@nwacg.net>

---------

Co-authored-by: wyrdough <nathan@nwacg.net>

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -337,7 +337,9 @@
             "Players" : "Players"
         },
         "ScoreScreen" : {
-            "BandScoreNotSaved" : "(Score not saved)"
+            "BandScoreNotSaved" : "(Score not saved)",
+            "RestartSong" : "Restart Song",
+            "EndSetlistEarly" : "End Setlist"
         },
         "Settings": {
             "NoFolder": "<i>No Folder</i>",
