Revert GameMode.Keys to GameMode.ProKeys

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -21,7 +21,7 @@
             "FourLaneDrums": "Standard Drums",
             "FiveLaneDrums": "Five-Lane Drums",
             "ProGuitar": "Pro Guitar",
-            "Keys": "Keys (Pro and Five-Lane)",
+            "ProKeys": "Keys (Pro and Five-Lane)",
             "Menu": "Menu",
             "Vocals": "Vocals"
         },
