Addressed PR feedback. Introduced IScoreCard interface to resolve awkward handling of ScoreCard types Added missing localization text for "Scroll"

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -143,7 +143,9 @@
             "Delete": "Delete",
 
             "Reset": "Reset",
-            "ResetAll": "Reset All"
+            "ResetAll": "Reset All",
+			
+			"Scroll" : "Scroll"
         },
         "Credits": {
             "Description": "Contributed To: {0}\n\n{1}",
